# AutobotX

./: CMakeLists.txt  README.md  frames.gv  package.xml  setup.py
LowerControl/: MergedCode.ino  mavlink_helpers.h
LowerControl/autorobot/: mavlink_msg_desire_cmd_val.h  mavlink_msg_desire_wheel_rpm.h  mavlink_msg_initial_status.h  mavlink_msg_right_wheel_pid_gains.h  mavlink_msg_robot_dimensions.h  mavlink_msg_robot_sensor_readings.h  testsuite.h
launch/: amcl.launch  base_controller.launch  gmap_slam.launch  kinect.launch  main.launch  nav_goal.launch
map/: lab1.pgm  lab1.yaml  my_map.pgm  my_map.yaml  swami_v01.pgm  swami_v01.yaml  swami_v02.pgm  swami_v02.yaml
msg/: Unicycle.msg
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
rviz/: common.rviz
scripts/: reader.py  teleop_keys.py
src/: link.cpp  mavlink_communication.cpp  mavlink_communication.h  serial_port.cpp  serial_port.h
src/mavlink/autobot/: autorobot.h  mavlink.h  mavlink_msg_desire_cmd_val.h  mavlink_msg_left_wheel_pid_gains.h  mavlink_msg_robot_distance_sensor_readings.h  mavlink_msg_robot_position_change.h  version.h
